--- a/app/src/main/res/layout/activity_registro_usuario.xml
+++ b/app/src/main/res/layout/activity_registro_usuario.xml
@@ -68,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="50dp"
+        android:onClick="crearUsuario"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etConfirmarContraseña"
